--- a/assets/css/block/products.css
+++ b/assets/css/block/products.css
@@ -51,3 +51,51 @@
   color: #364453;
   font-weight: 500;
 }
+
+.products::after {
+  border-top-color: #dde5f1;
+}
+
+.products .bonus {
+  padding-bottom: 3.375rem;
+  padding-top: 4.25rem;
+}
+
+.bonus .title {
+  margin-bottom: 2.625rem;
+}
+
+.bonus .bonus-item {
+  padding: 2.375rem 0px;
+}
+
+.bonus .bonus-title {
+  color: #032a4d;
+  font-family: 'PT Serif', sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0px;
+  text-transform: uppercase;
+}
+
+.bonus .bonus-subtitle {
+  color: #364453;
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 1.75rem;
+  margin-top: 1.25rem;
+  text-transform: uppercase;
+}
+
+.bonus .bonus-description {
+  color: #364453;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  margin: 0px;
+}
+
+.bonus .bonus-footer {
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 1.875rem;
+}
