--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,10 +5,6 @@ textarea {
   font-family: 'Poppins', sans-serif;
 }
 
-body {
-  padding-bottom: 100vh;
-}
-
 strong {
   font-weight: 700;
 }
@@ -51,6 +47,8 @@ main {
   display: block;
   font-size: 1.5rem;
   font-weight: 700;
+  margin: 0px auto;
+  max-width: 22rem;
   padding: 1rem 1.25rem;
   text-decoration: none !important;
   text-align: center;
@@ -59,6 +57,17 @@ main {
 
 .button:hover {
   opacity: 0.85;
+}
+
+.link {
+  display: block;
+  font-size: 1rem;
+  line-height: 1.875rem;
+  margin: 0px auto;
+  max-width: 20rem;
+  text-align: center;
+  text-decoration: underline;
+  width: 100%;
 }
 
 br {
@@ -71,8 +80,8 @@ br {
   }
 
   section {
-    padding-left: 0.875rem;
-    padding-right: 0.875rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .container {
