--- a/assets/css/block/only-today.css
+++ b/assets/css/block/only-today.css
@@ -11,18 +11,9 @@
   margin: 0px;
 }
 
-.today .today-price small {
-  font-size: 1.875rem;
-  font-weight: 700;
-}
-
-.today .today-price {
-  font-size: 5rem;
-  font-family: 'PT Serif';
-  font-weight: 700;
+.today .total {
   margin-bottom: 1rem;
   margin-top: 3.125rem;
-  white-space: nowrap;
 }
 
 #vitalicia {
