--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,11 @@ textarea {
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 strong {
   font-weight: 700;
 }
@@ -20,6 +25,15 @@ main {
   font-weight: 700;
   line-height: 1.875rem;
   text-align: center;
+}
+
+.subtitle {
+  color: #010101;
+  font-size: 1.125rem;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.875rem;
+  margin: 0px;
 }
 
 .triangle {
@@ -60,6 +74,7 @@ main {
 }
 
 .link {
+  color: inherit;
   display: block;
   font-size: 1rem;
   line-height: 1.875rem;
@@ -67,11 +82,30 @@ main {
   max-width: 20rem;
   text-align: center;
   text-decoration: underline;
+  transition: opacity 0.3s ease;
   width: 100%;
+}
+
+.link:hover {
+  opacity: 0.7;
 }
 
 br {
   display: none;
+}
+
+.total small {
+  display: block;
+  font-size: 1.875rem;
+  font-weight: 700;
+  margin-bottom: -0.5rem;
+}
+
+.total {
+  font-size: 4.5rem;
+  font-family: 'PT Serif';
+  font-weight: 700;
+  white-space: nowrap;
 }
 
 @media (max-width: 423px) {
@@ -92,5 +126,9 @@ br {
 @media (min-width: 424px) {
   br {
     display: block;
+  }
+
+  .total {
+    font-size: 5rem;
   }
 }
